--- a/GeniusIdiotConsoleApp/GeniusIdiotConsoleApp.csproj
+++ b/GeniusIdiotConsoleApp/GeniusIdiotConsoleApp.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
     <Compile Include="ResultTable.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
