--- a/GeniusIdiotConsoleApp/GeniusIdiotConsoleApp.csproj
+++ b/GeniusIdiotConsoleApp/GeniusIdiotConsoleApp.csproj
@@ -44,11 +44,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="FileManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
+    <Compile Include="QuestionsStorage.cs" />
     <Compile Include="ResultTable.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserStorage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
